Update app metadata and dependencies; fix ToC heading init
Changed app name and description in app.json for clarity. Updated Svelte, Vite, and related dependencies to latest versions in package.json and package-lock.json. Fixed Table of Contents component to initialize activeHeading more robustly, preventing potential errors on first render.

--- a/app.json
+++ b/app.json
@@ -2,7 +2,7 @@
   "configVersion": "v2",
   "app": {
     "appId": 25032,
-    "appName": "Empty",
+    "appName": "ZSR",
     "appType": "app",
     "version": {
       "code": 1,
@@ -10,7 +10,7 @@
     },
     "icon": "icon.png",
     "vender": "zepp",
-    "description": "empty application"
+    "description": "This is screen reader for zepp OS"
   },
   "permissions": [
     "data:os.device.info",
