--- a/package.json
+++ b/package.json
@@ -9,21 +9,21 @@
     "dev": "zeus dev",
     "build": "zeus build",
     "preview": "zeus preview",
-    "lint": "eslint . --ext .js",
-    "lint:fix": "eslint --fix . --ext .js",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write .",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "NVC development Team",
   "license": "MIT License",
   "devDependencies": {
-		"@eslint/compat": "^1.3.1",
-    "@eslint/js": "^9.32.0",
+    "@eslint/compat": "^1.3.2",
+    "@eslint/js": "^9.33.0",
     "@zeppos/device-types": "^3.0.0",
-		"eslint": "^9.32.0",
-		"eslint-config-prettier": "^10.1.8",
+    "eslint": "^9.33.0",
+    "eslint-config-prettier": "^10.1.8",
     "globals": "^16.3.0"
   },
   "dependencies": {
-    "eslint": "^9.32.0"
+    "eslint": "^9.33.0"
   }
 }
