--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -8,17 +8,31 @@
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
+		"lint": "prettier --check . && eslint .",
+		"check": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json",
+		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./jsconfig.json --watch",
+		"format": "prettier --write .",
 		"prepare": "svelte-kit sync || echo ''"
 	},
 	"devDependencies": {
-		"@sveltejs/kit": "^2.27.0",
-		"@sveltejs/vite-plugin-svelte": "^6.1.0",
-		"svelte": "^5.37.2",
-		"vite": "^7.0.6"
+		"@eslint/compat": "^1.3.2",
+		"@eslint/js": "^9.33.0",
+		"@sveltejs/kit": "^2.28.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.1",
+		"eslint": "^9.33.0",
+		"eslint-config-prettier": "^10.1.8",
+		"eslint-plugin-svelte": "^3.11.0",
+		"globals": "^16.3.0",
+		"prettier": "^3.6.2",
+		"prettier-plugin-svelte": "^3.4.0",
+		"prettier-plugin-tailwindcss": "^0.6.14",
+		"svelte": "^5.38.1",
+		"svelte-check": "^4.3.1",
+		"vite": "^7.1.2"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^7.1.2",
-		"@sveltia/cms": "^0.92.4",
+		"@sveltejs/adapter-cloudflare": "^7.1.3",
+		"@sveltia/cms": "^0.96.0",
 		"@tailwindcss/postcss": "^4.1.11",
 		"@vcarl/remark-headings": "^0.1.0",
 		"astro-sveltia-cms": "^0.1.0",
