--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -16,24 +16,24 @@
 	},
 	"devDependencies": {
 		"@eslint/compat": "^1.3.2",
-		"@eslint/js": "^9.33.0",
-		"@sveltejs/kit": "^2.28.0",
-		"@sveltejs/vite-plugin-svelte": "^6.1.1",
-		"eslint": "^9.33.0",
+		"@eslint/js": "^9.34.0",
+		"@sveltejs/kit": "^2.36.2",
+		"@sveltejs/vite-plugin-svelte": "^6.1.3",
+		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
 		"globals": "^16.3.0",
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"svelte": "^5.38.1",
+		"svelte": "^5.38.3",
 		"svelte-check": "^4.3.1",
-		"vite": "^7.1.2"
+		"vite": "^7.1.3"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^7.1.3",
-		"@sveltia/cms": "^0.96.0",
-		"@tailwindcss/postcss": "^4.1.11",
+		"@sveltejs/adapter-cloudflare": "^7.2.2",
+		"@sveltia/cms": "^0.100.1",
+		"@tailwindcss/postcss": "^4.1.12",
 		"@vcarl/remark-headings": "^0.1.0",
 		"astro-sveltia-cms": "^0.1.0",
 		"autoprefixer": "^10.4.21",
@@ -41,6 +41,7 @@
 		"mdsvex": "^0.12.6",
 		"mdsvex-relative-images": "^2.0.0",
 		"node-html-parser": "^7.0.1",
+		"@tailwindcss/typography": "^0.5.16",
 		"postcss-load-config": "^6.0.1",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
