--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -17,7 +17,7 @@
 	"devDependencies": {
 		"@eslint/compat": "^1.3.2",
 		"@eslint/js": "^9.34.0",
-		"@sveltejs/kit": "^2.36.2",
+		"@sveltejs/kit": "^2.36.3",
 		"@sveltejs/vite-plugin-svelte": "^6.1.3",
 		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -26,13 +26,14 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"svelte": "^5.38.3",
+		"tailwindcss": "^4.1.12",
+		"svelte": "^5.38.5",
 		"svelte-check": "^4.3.1",
 		"vite": "^7.1.3"
 	},
 	"dependencies": {
-		"@sveltejs/adapter-cloudflare": "^7.2.2",
-		"@sveltia/cms": "^0.100.1",
+		"@sveltejs/adapter-cloudflare": "^7.2.3",
+		"@sveltia/cms": "^0.101.0",
 		"@tailwindcss/postcss": "^4.1.12",
 		"@vcarl/remark-headings": "^0.1.0",
 		"astro-sveltia-cms": "^0.1.0",
