--- a/site/htdocs/package.json
+++ b/site/htdocs/package.json
@@ -19,6 +19,7 @@
 		"@eslint/js": "^9.34.0",
 		"@sveltejs/kit": "^2.37.0",
 		"@sveltejs/vite-plugin-svelte": "^6.1.3",
+		"@tailwindcss/vite": "^4.1.12",
 		"eslint": "^9.34.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
@@ -26,16 +27,17 @@
 		"prettier": "^3.6.2",
 		"prettier-plugin-svelte": "^3.4.0",
 		"prettier-plugin-tailwindcss": "^0.6.14",
-		"tailwindcss": "^4.1.12",
-"@tailwindcss/vite": "^4.1.12",
 		"svelte": "^5.38.6",
 		"svelte-check": "^4.3.1",
+		"svelte-eslint-parser": "^1.3.1",
+		"tailwindcss": "^4.1.12",
 		"vite": "^7.1.3"
 	},
 	"dependencies": {
 		"@sveltejs/adapter-cloudflare": "^7.2.3",
 		"@sveltia/cms": "^0.102.0",
 		"@tailwindcss/postcss": "^4.1.12",
+		"@tailwindcss/typography": "^0.5.16",
 		"@vcarl/remark-headings": "^0.1.0",
 		"astro-sveltia-cms": "^0.1.0",
 		"autoprefixer": "^10.4.21",
@@ -43,7 +45,6 @@
 		"mdsvex": "^0.12.6",
 		"mdsvex-relative-images": "^2.0.0",
 		"node-html-parser": "^7.0.1",
-		"@tailwindcss/typography": "^0.5.16",
 		"postcss-load-config": "^6.0.1",
 		"reading-time": "^1.5.0",
 		"rehype-autolink-headings": "^7.1.0",
